--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,11 +49,352 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.recyclerview.widget.RecyclerView
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:id="@+id/recycler_view_story"/>
+                android:layout_below="@+id/storiesBar">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/avatar1"
+                                    android:id="@+id/story1"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Pham"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/avatar2"
+                                    android:id="@+id/story2"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Nghia"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/luong"
+                                    android:id="@+id/story3"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Luong"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/avatar5"
+                                    android:id="@+id/story4"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Tired"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/yametee"
+                                    android:id="@+id/story5"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="G2"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/avatar4"
+                                    android:id="@+id/story6"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Nam"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/avatar0"
+                                    android:id="@+id/story7"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="?"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/ricardo"
+                                    android:id="@+id/story8"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Be"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/storyOutline"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="#000000"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            app:cardCornerRadius="27dp">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="25dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/spider"
+                                    android:id="@+id/story9"/>
+                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Gay"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
+
 
             <RelativeLayout
                 xmlns:tools="http://schemas.android.com/tools"
